--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/react": "^18.0.28",
     "@types/react-calendar": "^3.8.0",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
+    "hanspell": "^0.9.7",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
