--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "hanspell": "^0.9.7",
-    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
@@ -56,5 +55,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
