--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@types/react": "^18.0.28",
     "@types/react-calendar": "^3.8.0",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.4.0",
+    "camelcase-keys": "^8.0.2",
     "date-fns": "^2.30.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "snakecase-keys": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
