--- a/package.json
+++ b/package.json
@@ -59,5 +59,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
