--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.28",
     "@types/react-calendar": "^3.8.0",
     "@types/react-dom": "^18.0.11",
+    "@types/recordrtc": "^5.6.11",
     "axios": "^1.4.0",
     "camelcase-keys": "^8.0.2",
     "date-fns": "^2.30.0",
@@ -24,6 +25,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "recordrtc": "^5.6.2",
     "snakecase-keys": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
