--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.12",
+    "@react-oauth/google": "^0.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "axios": "^1.4.0",
     "camelcase-keys": "^8.0.2",
     "date-fns": "^2.30.0",
+    "jwt-decode": "^3.1.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
