--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/audiobuffer-to-wav": "^1.0.2",
     "@types/jest": "^27.5.2",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^16.18.16",
@@ -18,6 +19,7 @@
     "@types/react-calendar": "^3.8.0",
     "@types/react-dom": "^18.0.11",
     "@types/recordrtc": "^5.6.11",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^1.4.0",
     "camelcase-keys": "^8.0.2",
     "date-fns": "^2.30.0",
